--- a/_posts/2022-10-06-first.md
+++ b/_posts/2022-10-06-first.md
@@ -1,6 +1,9 @@
 ---
 layout: single
 title:  "Welcome to Jekyll!"
+categories: Projects
+tag: C++
+toc: true
 ---
 
 # Welcome
@@ -8,3 +11,18 @@ title:  "Welcome to Jekyll!"
 **Hello world**, this is my first Jekyll blog post.
 
 I hope you like it
+
+## Codes
+
+```c++
+
+# This program prints Hello, world!
+
+template<typename T>
+class Example {
+    T a = 2;
+};
+
+cout<<'Hello, world!'<<endl;
+
+```
