--- a/_posts/2022-10-06-first.md
+++ b/_posts/2022-10-06-first.md
@@ -4,6 +4,9 @@ title:  "Welcome to Jekyll!"
 categories: Projects
 tag: C++
 toc: true
+author_profile: false
+sidebar:
+    nav: 'docs'
 ---
 
 # Welcome
