lattice boltzmann brief description

--- a/_posts/2022-10-06-first.md
+++ b/_posts/2022-10-06-first.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title:  "Welcome to Jekyll!"
+title:  "Permeability of Cementitiou Material"
 categories: Projects
 tag: C++
 toc: true
@@ -9,23 +9,307 @@ sidebar:
     nav: 'docs'
 ---
 
-# Welcome
+## Why?
 
-**Hello world**, this is my first Jekyll blog post.
+<span style = "font-size:100%"> Cementitious material and concrete are most widely used material in the world. As structures around the world are getting old and new construction should have knowledge about structure's duration, evaluation of durability for cementitious materials is earning increased attention and importance. The durability evaluation has been conducted through permeability test and ionic diffusion test. However, these tests are time consuming and need large samples for testing which is too complicated for built structures. Therefore, efforts to adopt computational methods for these tests are made for past few years. But those computational domain for simulations was resolved insufficiently with methods such as micro CT or NMR which made this effort get less attention compared to that for the durability assessment.  
+This study takes in account for insufficient resolution of sensing techniques and give description of the framework for the evaluation.  </span>
 
-I hope you like it
+## Lattice Boltzmann Method
+
+### Lattice Boltzmann Equation
+$ f_{i}(x+\Delta x,\,t+\Delta t) - f_{i}(x,\,t) = \Delta t\,\Omega_{i}(x,\,t)$
+
+### Collision Step
+
+$f_{i}^{c}(x,\,t) = \Delta t\,\Omega_{i}(x,\,t) + f_{i}(x,\,t)$
+
+### Stream Step
+$ f_{i}(x+\Delta x,\,t+\Delta t) = f_{i}^{c}(x,\,t)$
+
+### BGK Collision Operator
+
+$\Omega_{i}(x,\,t) = -\frac{1}{\tau} (f_{i}(x,\,t)-f_{i}^{eq}(x,\,t))$
+
+## Partial Bounce Back Lattice Boltzmann Method
+
+Using Same BGK collision operator, we adopt new parameter differed from relaxation time $\tau$, $n_{s}$ which describes solid fraction of the voxel, that has relationship with physical solid fraction by $n_{s} = \phi (n_{p})$, where $\phi(\cdot)$ is determined by tortuosity, porosity of the voxel. ($0\leq n_{s}\leq 1$)
+
+Then partial bounceback scheme adopts new repartition step between collision and stream as follows.
+
+### Repartition Step
+
+$f_{i}^{r}(x,\,t) =  (1-n_{s})\,f_{i}^{c}(x,\,t)+n_{s}\,f_{\bar{i}}^{c}(x,\,t)$  
+(where $\bar{i}$ indicates opposite direction of $i$.)
+
+![Simulation Image](/assets/images/ns7_sorted_turbo.png)  
+<center style="font-size:70%"> Figure 1. Gray lattice Boltzmann simulation result </center>
 
 ## Codes
 
+<details>
+<summary> Click to see summarized code</summary>
+<div markdown="1">
+
+
+### Class for initializing cell population.
+
 ```c++
+class pressureGradient
+{
+    public:
+    pressureGradient(T deltaP_, plint nx_) : deltaP(deltaP_), nx(nx_){}
+    void operator()(plint iX, plint iY, plint iZ, T &density, Array<T,3> &velocity) const
+    {
+        velocity.resetToZero();
+        density = 1 - deltaP * DESCRIPTOR<T>::invCs2 / (T)(nx-1) * (T)iX;
+    }
 
-# This program prints Hello, world!
-
-template<typename T>
-class Example {
-    T a = 2;
+    private:
+    T deltaP;
+    plint nx;
 };
-
-cout<<'Hello, world!'<<endl;
-
 ```
+
+### Function for reading geometry file.
+```c++
+void readGeometry(string fNameIn, string fNameOut, MultiScalarField3D<int> &geometry, bool vtk_out, string GeometryName)
+{
+    const plint nx = geometry.getNx();
+    const plint ny = geometry.getNy();
+    const plint nz = geometry.getNz();
+    string fNameInTemp = fNameIn + GeometryName + ".dat";
+
+    Box3D sliceBox(0,0,0,ny-1,0,nz-1);
+
+    pcout<<"The geometry name is "<<fNameInTemp<<endl;
+
+    unique_ptr<MultiScalarField3D<int>> slice = generateMultiScalarField<int>(geometry, sliceBox);
+    plb_ifstream geometryFile(fNameInTemp.c_str());
+
+    for (plint iX = 0; iX < nx - 1; ++iX){
+        if (!geometryFile.is_open()){
+            pcout<<"Error : could not open the geometry file "<<fNameInTemp<<endl;
+            exit(EXIT_FAILURE);
+        }
+
+        geometryFile >> *slice;
+        copy(*slice, slice->getBoundingBox(), geometry, Box3D(iX,iX, 0, ny - 1, 0, nz - 1));
+    }
+
+    if (vtk_out == true){
+        VtkImageOutput3D<T> vtkOut(createFileName("Geometry",0,6));
+        vtkOut.writeData<float>(*copyConvert<int, T>(geometry, geometry.getBoundingBox()), "tag", 1.0);
+    }
+}
+```
+
+### Function for simulation setup.
+
+```c++
+void simSetup(MultiBlockLattice3D<T,DESCRIPTOR> &lattice, OnLatticeBoundaryCondition3D<T,DESCRIPTOR> *boundaryCondition, 
+                MultiScalarField3D<int> &geometry, MultiScalarField3D<T> &ns, T deltaP)
+
+{
+    pcout<<"Setting up the simulation"<<endl;
+    const plint nx = lattice.getNx();
+    const plint ny = lattice.getNy();
+    const plint nz = lattice.getNz();
+
+    pcout << "Definition of inlet/outlet. "<<endl;
+
+    Box3D inlet(0,0,1,ny-1, 1, nz-2);
+    boundaryCondition -> addPressureBoundary0N(inlet, lattice);
+    setBoundaryDensity(lattice, inlet,(T) 1.);
+
+    Box3D outlet(nx-1,nx-1,1,ny-1, 1, nz-2);
+    boundaryCondition -> addPressureBoundary0P(outlet, lattice);
+    setBoundaryDensity(lattice, outlet,(T) 1. - deltaP*DESCRIPTOR<T>::invCs2);
+
+    std::vector<MultiBlock3D *> latticeArg;
+    latticeArg.push_back(&lattice);
+    latticeArg.push_back(&ns);
+    applyProcessingFunctional(new ApplyFieldToExternal<T, DESCRIPTOR>, lattice.getBoundingBox(), latticeArg);
+
+    defineDynamics(lattice, geometry, new NoDynamics<T,DESCRIPTOR>(), 2);
+    defineDynamics(lattice, geometry, new PartialBBdynamics<T,DESCRIPTOR>((T) 1), 3);
+    defineDynamics(lattice, geometry, new BounceBack<T,DESCRIPTOR>(),1);
+
+
+    initializeAtEquilibrium(lattice, lattice.getBoundingBox(), pressureGradient(deltaP,nx));
+
+    lattice.initialize();
+
+    delete boundaryCondition;
+
+    pcout<<"End of setting up the simulation"<<endl;
+}
+```
+### Main function
+
+```c++
+int main(int argc, char **argv)
+{
+    plbInit(&argc, &argv);
+
+    string fNameIn;
+    string fNameOut;
+
+    plint nx;
+    plint ny;
+    plint nz;
+    T deltaP;
+    bool nx_p, ny_p, nz_p, vtk_out;
+
+    string GeometryName;
+    string nsName, etaName;
+    plint maxT; 
+    T conv;
+    T omegaPlus = (T) 1 / atof(argv[2]);
+    T magic;
+    T physNu, physL, physRho, physU;
+    bool apply = false;
+
+    string xmlFname;
+
+    try
+    {
+        global::argv(1).read(xmlFname);
+    }
+    catch (PlbIOException &exception)
+    {
+        pcout << "You must specify an input file." << endl;
+        pcout << "Usage: " << (std::string) global::argv(0) << " input.xml" << endl;
+        return -1;
+    }
+
+    pcout<< "Reading inputs from xml file"<<endl;
+    try {
+        XMLreader document(xmlFname);
+        document["geometry"]["file_geom"].read(GeometryName);
+
+        document["geometry"]["file_ns"].read(nsName);
+        document["geometry"]["file_eta"].read(etaName);
+
+        document["geometry"]["size"]["x"].read(nx);
+        document["geometry"]["size"]["y"].read(ny);
+        document["geometry"]["size"]["z"].read(nz);
+	    document["geometry"]["per"]["x"].read(nx_p);
+        document["geometry"]["per"]["y"].read(ny_p);
+        document["geometry"]["per"]["z"].read(nz_p);
+
+        document["folder"]["out_f"].read(fNameOut);
+        document["folder"]["in_f"].read(fNameIn);
+
+        document["simulation"]["press"].read(deltaP);
+        document["simulation"]["iter"].read(maxT);
+	    document["simulation"]["conv"].read(conv);
+	    document["simulation"]["vtk_out"].read(vtk_out);
+        // document["simulation"]["omega_plus"].read(omegaPlus);
+        document["simulation"]["magic"].read(magic);
+
+        document["characteristics"]["nu"].read(physNu);
+        document["characteristics"]["resol"].read(physL);
+        document["characteristics"]["rho"].read(physRho);
+    }
+    catch (PlbIOException& exception) {
+      pcout << exception.what() << std::endl;
+      pcout << exception.what() << std::endl;
+      return -1;
+    }
+
+    string inputF = fNameIn;
+    global::directories().setOutputDir(fNameOut+"/");
+    global::directories().setInputDir(inputF+"/");
+
+    T nu = ((T)1/omegaPlus-(T)0.5)/DESCRIPTOR<T>::invCs2;
+    physU = physL*physL*nu/physNu;
+    T omegaMinus = magic/omegaMinus;
+
+    T Perm;
+    T Vel;
+
+    pcout << "Simulation Setup starts " <<endl;
+    pcout << "Max number of Iteration is "<<maxT<<endl;
+    pcout << "The convergence threshold is "<<conv<<endl;
+
+    util::ValueTracer<T> converge(physU, physL, conv);
+
+    plint physT = converge.getDeltaT();
+    pcout << "The physical time step is "<<physT<<endl;
+
+    MultiBlockLattice3D<T,DESCRIPTOR> lattice(nx, ny, nz, new BGKdynamics<T,DESCRIPTOR>(omegaPlus));
+
+    lattice.periodicity().toggle(0,nx_p);
+    lattice.periodicity().toggle(1,ny_p);
+    lattice.periodicity().toggle(2,nz_p);
+
+    MultiScalarField3D<int> geometry(nx, ny, nz);
+    MultiScalarField3D<T> ns(nx, ny, nz);
+    MultiScalarField3D<T> eta(nx, ny, nz);
+    readGeometry(fNameIn, fNameOut, geometry,vtk_out,GeometryName);
+    readDoubleData(fNameIn,fNameOut, ns , vtk_out, nsName);
+
+    simSetup(lattice, createLocalBoundaryCondition3D<T,DESCRIPTOR>(), geometry, ns, deltaP);
+
+    T new_avg_f, relE_f1;
+    T old_avg_f = 1;
+    lattice.toggleInternalStatistics(true);
+
+    pcout << "Simulation begins "<<endl;
+    for (plint iT = 0; iT < maxT; ++iT){
+
+        lattice.collideAndStream();
+        new_avg_f = getStoredAverageEnergy(lattice);
+        relE_f1 = fabs(old_avg_f-new_avg_f)/old_avg_f;
+        old_avg_f = new_avg_f;
+
+        if (iT%1000 == 0 && iT > 0){
+            pcout <<"Iteration "<<iT<<endl;
+            pcout <<"Average velocity = "<<computeAverage(*computeVelocityComponent(lattice, lattice.getBoundingBox(), 0))<<endl;
+            pcout <<"Max velocity = "<<computeMax(*computeVelocityComponent(lattice, lattice.getBoundingBox(), 0))<<endl;
+            pcout <<"The permeability is : "<<endl;
+            computePermeability(lattice, nu, deltaP, Perm, Vel);
+            pcout << "Error = "<<relE_f1<<endl;
+            pcout << "*********************************"<<endl;
+            writeGifs(lattice, iT);
+            if(iT%2000 == 0)
+            {
+                writeVTK(lattice,iT);
+            }
+        }
+
+        if(relE_f1<conv)
+        {
+            pcout <<"Iteration "<<iT<<endl;
+            pcout <<"Average velocity = "<<computeAverage(*computeVelocityComponent(lattice, lattice.getBoundingBox(), 0))<<endl;
+            pcout <<"The permeability is : "<<endl;
+            computePermeability(lattice, nu, deltaP, Perm, Vel);
+            pcout << "Error = "<<relE_f1<<endl;
+            pcout << "*********************************"<<endl;
+            pcout << "End of Simulation "<<endl;
+            pcout << "*********************************"<<endl;
+            pcout << "Writing Simulation Result Files "<<endl;
+            writeGifs(lattice, iT);
+            writeVTK(lattice, iT);
+            pcout << "End of Program "<<endl;
+            break;
+        }
+
+        if(isnan(relE_f1))
+        {
+            pcout << "Error = "<<relE_f1<<endl;
+            pcout << "Simulation Diverged at Iteration "<<iT<<endl;
+            pcout << "*********************************"<<endl;
+            pcout << "End of Simulation "<<endl;
+            pcout << "*********************************"<<endl;
+            pcout << "Writing Simulation Result Files "<<endl;
+            writeGifs(lattice, iT);
+            pcout << "End of Program "<<endl;
+            break;
+        }
+
+    }        
+}
+```
+</div>
+</details>
