solid fraction table

--- a/_posts/2022-10-06-first.md
+++ b/_posts/2022-10-06-first.md
@@ -44,6 +44,12 @@ $f_{i}^{r}(x,\,t) =  (1-n_{s})\,f_{i}^{c}(x,\,t)+n_{s}\,f_{\bar{i}}^{c}(x,\,t)$
 ![Simulation Image](/assets/images/ns7_sorted_turbo.png)  
 <center style="font-size:70%"> Figure 1. Gray lattice Boltzmann simulation result </center>
 
+## Cement Composites Solid Fraction
+
+|W/C Ratio| 0.3|0.4|0.5|0.6|0.7|
+|--|:--:|:--:|:--:|:--:|:--:|
+|Solid Fraction| 0.883|0.844|0.781|0.683|0.573|
+
 ## Codes
 
 <details>
