--- a/_posts/2022-10-06-first.md
+++ b/_posts/2022-10-06-first.md
@@ -50,6 +50,10 @@ $f_{i}^{r}(x,\,t) =  (1-n_{s})\,f_{i}^{c}(x,\,t)+n_{s}\,f_{\bar{i}}^{c}(x,\,t)$
 |--|:--:|:--:|:--:|:--:|:--:|
 |Solid Fraction| 0.883|0.844|0.781|0.683|0.573|
 
+## Simulation Results
+
+![OPC-to-w/c ratio simulation results](/assets/images/OPC_results.png)
+
 ## Codes
 
 <details>
